RegistrationPage.css
@import url(https://db.onlinewebfonts.com/c/e662339992c4abf5b43f537391bd3169?family=Candara);

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    justify-content: center;
    align-items: center;
    background-color: #a82a1b;
}

.wrapper {
    background-position: center;
    color: #4b3f3e;
    font-family: "Candara", sans-serif;
    max-width: 100vw;
    margin-bottom: 18vh;
    margin-top: 10%;
}

.wrapper h1 {
    font-size: 90;
    font-weight: normal;
    color: #f5d2d2;
    text-align: center;
    margin-bottom: 20;
}

.wrapper .box {
    text-align: center;
    background-color: #f5d2d2;
    width:100%; 
    display:inline-block;
    border:10px solid #f3f3f3;
}

.wrapper .input-box {
    width: 100%;
    height: 50px;
    transform: translateY(50%);
    margin-bottom: 2%;
}

.wrapper .age-select {
    position: relative;
    width: 100%;
    height: 50px;
    transform: translateY(50%);
    margin-top: -2%;
    margin-bottom: 2%;
    font-family: "Candara", sans-serif;
    font-weight: bold;
    font-size: 22px;
}

.age-select input {
    font-family: "Candara", sans-serif;
    font-weight: bold;
    min-width: 2%;
    width:3vh;
    height: 50%;
    background-color: #af9b9a;
    color: black;
    font-size: 18px;
    border: none;
}

.input-box input {
    font-family: "Candara", sans-serif;
    font-weight: bold;
    width: 70%;
    height: 70%;
    background-color: #af9b9a;
    color: black;
    font-size: 22px;
    border: none;
}

::placeholder {
    color: #4b3f3e;
}

.input-box i {
    top: 10vh;
    right: 80vw;
    font-size: 25;
}

.wrapper .license-terms {
    position: relative;
    text-align: center;
    font-size: 18;  
    margin-bottom: 2%;
}

.license-terms input[type="checkbox"] {
    zoom: 1.3;  
    transform: translateY(15%);
}

.wrapper .already-have-an-account {
    position: relative;
    text-align: center;
    font-size: 16;
}

.wrapper .btn {
    cursor: pointer;
    font-family: 'Times New Roman', Times, serif;   
    color: #f5d2d2;
    border: none;
    outline: none;
    background: #4b3f3e;
    width: 40%;
    border-radius: 100px;
    font-size: 60;
    margin-bottom: 2%;
}

